Release 1.1

#8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
#10 KeyBuilder refactoring - renaming to KeyMapAdapter

Release 1.0 2014-08-13

[open sourcing LinkETL]

