@@ -2,6 +2,7 @@ Release 1.1
 
 #8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
 #10 KeyBuilder refactoring - renaming to KeyMapAdapter
+#11 Rename MatchingTaskBuilder.matchByPrimaryKey to matchById
 
 Release 1.0 2014-08-13
 
